--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
+*.ipynb filter=lfs diff=lfs merge=lfs -text
+\# filter=lfs diff=lfs merge=lfs -text
+例：Jupyter filter=lfs diff=lfs merge=lfs -text
+NotebookファイルをLFSで管理 filter=lfs diff=lfs merge=lfs -text
 data_gene.ipynb filter=lfs diff=lfs merge=lfs -text
 .ipynb_checkpoints/*.ipynb filter=lfs diff=lfs merge=lfs -text
