Add files including large ones managed by LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,6 @@
 \# filter=lfs diff=lfs merge=lfs -text
 例：Jupyter filter=lfs diff=lfs merge=lfs -text
 NotebookファイルをLFSで管理 filter=lfs diff=lfs merge=lfs -text
+LFS設定 filter=lfs diff=lfs merge=lfs -text
 data_gene.ipynb filter=lfs diff=lfs merge=lfs -text
 .ipynb_checkpoints/*.ipynb filter=lfs diff=lfs merge=lfs -text
