--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,6 @@
 NotebookファイルをLFSで管理 filter=lfs diff=lfs merge=lfs -text
 LFS設定 filter=lfs diff=lfs merge=lfs -text
 data_gene.ipynb filter=lfs diff=lfs merge=lfs -text
+すべての.ipynbファイル filter=lfs diff=lfs merge=lfs -text
 .ipynb_checkpoints/*.ipynb filter=lfs diff=lfs merge=lfs -text
+チェックポイント内の.ipynbファイル filter=lfs diff=lfs merge=lfs -text
